--- a/src/main/resources/assets/css/style.css
+++ b/src/main/resources/assets/css/style.css
@@ -19,7 +19,7 @@ html, body {
 .center-vertical {
     position: absolute;
     top: 1rem;
-    left: 0;
+    left: 30%;
     right: 0;
     bottom: 3rem;
     height: auto;
